# raylib-basic-ffmpeg-video-edit-example

./: .gitignore  CMakeLists.txt  README.md
data/: test.mpg
src/: main.c
